--- a/marks_designonly.html
+++ b/marks_designonly.html
@@ -240,7 +240,7 @@
                                                                 <label class="form-check-label form-check" for="bwmark" id="acceptmark"><span class="radio notspecial">Accept the black and white drawing.</span></label>
                                                             </div>
                                                             <div class="alert alert-warning" role="alert">
-                                                              <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
+                                                              <span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
                                                               <span class="sr-only">Warning:</span>
                                                               Submitting a color drawing with no claim to color could result in a refusal and delay the examination process.
                                                             </div>
