--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -275,7 +275,7 @@
                                                        </div>
                                                        <div class="panel-body nocontent match" role="button" aria-label="select standard character mark">
                                                           <div class="col-xs-5">
-                                                            <img src="images/FontAwesome47-2.png" alt="" class="img-responsive"> 
+                                                            <img src="images/FontAwesome47-2.png" alt="capital letter a" class="img-responsive"> 
                                                           </div>
                                                           <div class="col-xs-7">
                                                               <p class="right">Text only, with no particular stylization or font</p>
@@ -297,7 +297,7 @@
                                                    </div>
                                                    <div class="panel-body nocontent" role="button" aria-label="select stylized mark">
                                                       <div class="col-xs-5">
-                                                        <img src="images/abc_lobster.gif" alt="" class="img-responsive"> 
+                                                        <img src="images/abc_lobster.gif" alt="capital letters abc" class="img-responsive"> 
                                                       </div>
                                                       <div class="col-xs-7">
                                                           <p class="right">Text in a particular style or font</p>
@@ -321,7 +321,7 @@
                                                    </div>
                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                       <div class="col-xs-12">
-                                                        <img src="images/RetinaIcon-2.png" alt="" class="img-responsive"> 
+                                                        <img src="images/RetinaIcon-2.png" alt="3 shapes stacked one in fron of another" class="img-responsive"> 
                                                       </div>
                                                   </div>
                                                </div>
@@ -340,7 +340,7 @@
                                                    </div>
                                                    <div class="panel-body nocontent" role="button" aria-label="select design with text mark">
                                                       <div>
-                                                        <img src="images/RetinaIcon-3.png" alt="" class="img-responsive"> 
+                                                        <img src="images/RetinaIcon-3.png" alt="3 shapes stacked one in fron of another with a letter a in front" class="img-responsive"> 
                                                       </div>
                                                    </div>
                                                 </div>
@@ -366,7 +366,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/RetinaIcon_1.svg" alt="" class="img-responsive"> 
+                                                                        <img src="images/RetinaIcon_1.svg" alt="graphical representation of a 3-dimensional cube" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
@@ -385,7 +385,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/RetinaIcon_2.svg" alt="" class="img-responsive"> 
+                                                                        <img src="images/RetinaIcon_2.svg" alt="graphical representation of a 3-dimensional cube with a letter a" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
@@ -406,7 +406,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/PixleIcon_1.svg" alt="" class="img-responsive"> 
+                                                                        <img src="images/PixleIcon_1.svg" alt="graphical image of a speaker in use" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
@@ -425,7 +425,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/PixleIcon_2.svg" alt="" class="img-responsive"> 
+                                                                        <img src="images/PixleIcon_2.svg" alt="graphical image of a musical note" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
@@ -446,7 +446,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/nose-c-52601-jpg.jpg" alt="" class="img-responsive"> 
+                                                                        <img src="images/nose-c-52601-jpg.jpg" alt="pencil drawing of a nose" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
@@ -465,7 +465,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/yuo-04-e-11-d-jpg.jpg" alt="" class="img-responsive"> 
+                                                                        <img src="images/yuo-04-e-11-d-jpg.jpg" alt="grayscale image of one side of a Leggo block" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
@@ -486,7 +486,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/col-7864-bc-jpg.gif" alt="" class="img-responsive"> 
+                                                                        <img src="images/col-7864-bc-jpg.gif" alt="circle with concentric color scales" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
@@ -505,7 +505,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/adf-d-8-e-123-jpg.gif" alt="" class="img-responsive"> 
+                                                                        <img src="images/adf-d-8-e-123-jpg.gif" alt="abstract shape in five stages of motion" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
@@ -526,7 +526,7 @@
                                                                    </div>
                                                                    <div class="panel-body nocontent" role="button" aria-label="select design only mark">
                                                                       <div>
-                                                                        <img src="images/adf-d-8-e-123-jpg_2.gif" alt="" class="img-responsive"> 
+                                                                        <img src="images/adf-d-8-e-123-jpg_2.gif" alt="abstract shape in five stages of motion and a letter" class="img-responsive"> 
                                                                       </div>
                                                                   </div>
                                                                </div>
