--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -242,9 +242,9 @@
                                                 <label for="entitycountry">Please select citizenship or country where legally organized:</label>
                                                 <select class="form-control" id="entitycountry">
                                                   <option value="Select">Select</option>
-                                                  <option value="albania">Albania</option>
-                                                  <option value="algeria">Algeria</option>
-                                                  <option value="angola">Angola</option>
+                                                  <option value="albania" disabled>Albania</option>
+                                                  <option value="algeria" disabled>Algeria</option>
+                                                  <option value="angola" disabled>Angola</option>
                                                   <option value="bahamas">Bahamas</option>
                                                 </select>
                                               </div>
@@ -284,14 +284,14 @@
                                                         <label for="entypeforeignbahamas">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignbahamas">
                                                           <option value="Select">Select</option>
-                                                          <option value="soleforeign">Sole proprietorship</option>
+                                                          <option value="soleforeign" disabled>Sole proprietorship</option>
                                                           <option value="corpforeign">Corporation</option>
-                                                          <option value="domestic">Domestic Limited Companies</option>
-                                                          <option value="expartnership">Exempted Limited Partnership</option>
-                                                          <option value="international">International Business Company</option>
-                                                          <option value="duration">Limited Duration Company</option>
-                                                          <option value="liabilitco">Limited liability company</option>
-                                                          <option value="liabilitpart">Limited Liability Partnership</option>
+                                                          <option value="domestic" disabled>Domestic Limited Companies</option>
+                                                          <option value="expartnership" disabled>Exempted Limited Partnership</option>
+                                                          <option value="international" disabled>International Business Company</option>
+                                                          <option value="duration" disabled>Limited Duration Company</option>
+                                                          <option value="liabilitco" disabled>Limited liability company</option>
+                                                          <option value="liabilitpart" disabled>Limited Liability Partnership</option>
                                                         </select>
                                                     </div>
                                              	</div>
