--- a/user_profile.html
+++ b/user_profile.html
@@ -143,7 +143,7 @@
                        	<fieldset aria-labelledby="contactinfo">
                           	<div class="row">
                                 <div class="form-group form-group-md col-xs-12 col-lg-6">
-                                    <label for="countryterritory">Country/US territory <span class="weight600">&#42;</span></label>
+                                    <label for="countryterritory">Country/U.S. territory <span class="weight600">&#42;</span></label>
                                     <select class="form-control" id="countryterritory" required>
                                         <option value="1">United States of America</option>
                                         <option value="B2">Afghanistan</option>
@@ -181,6 +181,7 @@
                                         <option value="E0">Bulgaria</option>
                                         <option value="X2">Burkina Faso</option>
                                         <option value="E2">Burundi</option>
+                                        <option value="CANADA">Canada</option>
                                         <option value="E3">Cambodia</option>
                                         <option value="E4">Cameroon</option>
                                         <option value="E8">Cape Verde</option>
@@ -205,7 +206,7 @@
                                         <option value="G7">Denmark</option>
                                         <option value="1G">Djibouti</option>
                                         <option value="G9">Dominica</option>
-                                        <option value="G8">Dominica</option>
+                                        <option value="G8">Dominican Republic</option>
                                         <option value="2F">East Timor</option>
                                         <option value="H1">Ecuador</option>
                                         <option value="H2">Egypt</option>
@@ -246,7 +247,7 @@
                                         <option value="K6">Iceland</option>
                                         <option value="K7">India</option>
                                         <option value="K8">Indonesia</option>
-                                        <option value="K9">Iran, Islamic Republic Of</option>
+                                        <option value="K9">Iran, Islamic Republic of</option>
                                         <option value="L0">Iraq</option>
                                         <option value="L2">Ireland</option>
                                         <option value="L3">Israel</option>
@@ -258,7 +259,7 @@
                                         <option value="M3">Kenya</option>
                                         <option value="J2">Kiribati</option>
                                         <option value="M4">Korea, Democratic People&#8217;S Republic of</option>
-                                        <option value="M5">Korea, Republic Of</option>
+                                        <option value="M5">Korea, Republic of</option>
                                         <option value="M6">Kuwait</option>
                                         <option value="1N">Kyrgyzstan</option>
                                         <option value="M7">Lao People&#8217;s Democratic Republic</option>
@@ -271,7 +272,7 @@
                                         <option value="1Q">Lithuania</option>
                                         <option value="N4">Luxembourg</option>
                                         <option value="N5">Macau</option>
-                                        <option value="1U">Macedonia, Former Yugoslav Rep. Of</option>
+                                        <option value="1U">Macedonia, Former Yugoslav Rep. of</option>
                                         <option value="N6">Madagascar</option>
                                         <option value="N7">Malawi</option>
                                         <option value="N8">Malaysia</option>
