File Petition Table of Applications
Filtering is based on text content search for keyword 'abandoned'. Suggest discussion of how to tag rejected TM applications based on USPTO criteria for eligibilty of a TM application for petitioning to each of the four USPTO petition filing methods.

--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -733,7 +733,7 @@
                                     <h4 class="weight600">Acknowledgement of Certification in Good Standing</h4>
                                     <div class="form-group form-group-md">
                                         <input class="form-check-input checkmark" type="checkbox" value="" tabindex="0" aria-labelledby="userAccept-label" id="user-accept-checkbox" name="user-accept-checkbox">
-                                        <label class="form-check-label form-check" for="user-accept-checkbox" id="userAccept-label"><span class="radio notspecial">I certify that this attorney is in good standing with a bar of the highest court of any US State, the District of Columbia, the US Commonwealths or US Territories.</span></label>
+                                        <label class="form-check-label form-check" for="user-accept-checkbox" id="userAccept-label"><span class="radio notspecial">I certify that this attorney is in good standing with a bar of the highest court of any U.S. State, the District of Columbia, the U.S. Commonwealths or U.S. Territories.</span></label>
                                     </div>
                              	</div><!--END US affiliation-->
                                 <div id="canadianaffiliation" role="region" aria-labelledby="affiliation" class="hidethisdiv">
